--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ click==7.1.2
 colorama==0.4.4
 fastapi==0.63.0
 h11==0.12.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
 psycopg2==2.8.6
 pydantic==1.8
 python-dotenv==0.15.0
