--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 aiofiles==0.6.0
+bcrypt==3.2.0
+cffi==1.14.5
 click==7.1.2
 colorama==0.4.4
 fastapi==0.63.0
 h11==0.12.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+passlib==1.7.4
 psycopg2==2.8.6
+pycparser==2.20
 pydantic==1.8
 python-dotenv==0.15.0
 PyYAML==5.4.1
+six==1.15.0
 SQLAlchemy==1.3.23
 starlette==0.13.6
 typing-extensions==3.7.4.3
