--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pycparser==2.20
 pydantic==1.8
 python-dotenv==0.15.0
 python-jose==3.2.0
+python-multipart==0.0.5
 PyYAML==5.4.1
 rsa==4.7.2
 six==1.15.0
